[gd_scene load_steps=29 format=2]

[ext_resource path="res://Rock.tscn" type="PackedScene" id=1]
[ext_resource path="res://Minigame.gd" type="Script" id=2]
[ext_resource path="res://Player.gd" type="Script" id=3]
[ext_resource path="res://16_jump.wav" type="AudioStream" id=4]
[ext_resource path="res://lorenzohead.png" type="Texture" id=5]
[ext_resource path="res://00_training.ogg" type="AudioStream" id=6]
[ext_resource path="res://new_theme.tres" type="Theme" id=7]
[ext_resource path="res://11_crit.wav" type="AudioStream" id=8]
[ext_resource path="res://20_rank_up.wav" type="AudioStream" id=9]
[ext_resource path="res://Fireball.tscn" type="PackedScene" id=10]
[ext_resource path="res://Test.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://space.png" type="Texture" id=12]
[ext_resource path="res://ctrl.png" type="Texture" id=13]
[ext_resource path="res://whiteLKeftClick.png" type="Texture" id=14]
[ext_resource path="res://Jordan.png" type="Texture" id=15]
[ext_resource path="res://Matt.png" type="Texture" id=16]
[ext_resource path="res://Rachel.png" type="Texture" id=17]
[ext_resource path="res://Josh.png" type="Texture" id=18]
[ext_resource path="res://greasy_booga.png" type="Texture" id=19]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 56, 86 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 539.5, 10 )

[sub_resource type="Gradient" id=2]
interpolation_mode = 1
offsets = PoolRealArray( 0 )
colors = PoolColorArray( 0.160784, 0.521569, 0.27451, 1 )

[sub_resource type="GradientTexture2D" id=3]
gradient = SubResource( 2 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 34.625, 159 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 11 )

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.121569, 0.121569, 0.121569, 1 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=7]
size = 21
font_data = ExtResource( 11 )

[node name="Minigame" type="Node2D"]
script = ExtResource( 2 )
rock = ExtResource( 1 )
fireball = ExtResource( 10 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 229, 350 )
scale = Vector2( 0.75, 0.75 )
script = ExtResource( 3 )
gravity = 6000
jump_power = 1400

[node name="Sprite" type="Sprite" parent="Player"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 0, 4.66675 )
shape = SubResource( 4 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource( 4 )

[node name="Area2D" type="Area2D" parent="Player"]
position = Vector2( 0, -1.33334 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Player/Area2D"]
position = Vector2( 0, 4.66675 )
shape = SubResource( 4 )

[node name="Floor" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2( 525, 430 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="Floor"]
position = Vector2( 522, 452 )
scale = Vector2( 16.7813, 1 )
texture = SubResource( 3 )

[node name="CollectionArea" type="Area2D" parent="."]
position = Vector2( -235, -15 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollectionArea"]
position = Vector2( 142, 385 )
shape = SubResource( 5 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.21

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -8.0

[node name="CritPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -8.0

[node name="RankUpPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -8.0

[node name="MouseGetter" type="Control" parent="."]
margin_left = -166.0
margin_top = -73.0
margin_right = 1109.0
margin_bottom = 511.0

[node name="Rocks" type="Node2D" parent="."]

[node name="Control" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 7 )

[node name="Score" type="Label" parent="Control"]
margin_left = 30.0
margin_top = 318.0
margin_right = 88.0
margin_bottom = 339.0
text = "Score: 0"

[node name="Instructions" type="Control" parent="."]
margin_left = 140.0
margin_top = 17.0
margin_right = 140.0
margin_bottom = 17.0

[node name="Space" type="Sprite" parent="Instructions"]
position = Vector2( 134, 74.5 )
texture = ExtResource( 12 )

[node name="LeftClick" type="Sprite" parent="Instructions"]
position = Vector2( 212, 72.5 )
scale = Vector2( 0.212891, 0.212891 )
texture = ExtResource( 14 )

[node name="Ctrl" type="Sprite" parent="Instructions"]
position = Vector2( 23, 74 )
texture = ExtResource( 13 )

[node name="Crouch" type="Label" parent="Instructions"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -46.0
margin_right = 46.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 6 )
text = "Crouch"

[node name="ChooseCharacterPanel" type="Panel" parent="Instructions"]
margin_left = 359.0
margin_top = -48.0
margin_right = 879.0
margin_bottom = 109.0
custom_styles/panel = SubResource( 9 )

[node name="ChooseCharacterLabel" type="Label" parent="Instructions/ChooseCharacterPanel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -149.5
margin_top = 9.0
margin_right = 149.5
margin_bottom = 46.0
custom_fonts/font = SubResource( 6 )
text = "Choose Your Character"

[node name="ChooseCharacters" type="HBoxContainer" parent="Instructions/ChooseCharacterPanel/ChooseCharacterLabel"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -244.5
margin_top = 47.0
margin_right = 244.5
margin_bottom = 107.0
custom_constants/separation = 20
alignment = 1

[node name="ChooseLorenzo" type="TextureButton" parent="Instructions/ChooseCharacterPanel/ChooseCharacterLabel/ChooseCharacters"]
margin_left = 14.0
margin_right = 74.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
texture_normal = ExtResource( 5 )
expand = true
stretch_mode = 5

[node name="Label" type="Label" parent="Instructions/ChooseCharacterPanel/ChooseCharacterLabel/ChooseCharacters/ChooseLorenzo"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -40.0
margin_top = 2.0
margin_right = 40.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 8 )
text = "Lorenzo"
align = 1

[node name="ChooseMatt" type="TextureButton" parent="Instructions/ChooseCharacterPanel/ChooseCharacterLabel/ChooseCharacters"]
margin_left = 94.0
margin_right = 154.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
texture_normal = ExtResource( 16 )
expand = true
stretch_mode = 5

[node name="Label2" type="Label" parent="Instructions/ChooseCharacterPanel/ChooseCharacterLabel/ChooseCharacters/ChooseMatt"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -40.0
margin_top = 2.0
margin_right = 40.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 8 )
text = "Matthew"
align = 1

[node name="ChooseJordan" type="TextureButton" parent="Instructions/ChooseCharacterPanel/ChooseCharacterLabel/ChooseCharacters"]
margin_left = 174.0
margin_right = 234.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
texture_normal = ExtResource( 15 )
expand = true
stretch_mode = 5

[node name="Label3" type="Label" parent="Instructions/ChooseCharacterPanel/ChooseCharacterLabel/ChooseCharacters/ChooseJordan"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -40.0
margin_top = 2.0
margin_right = 40.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 8 )
text = "Jordan"
align = 1

[node name="ChooseRachel" type="TextureButton" parent="Instructions/ChooseCharacterPanel/ChooseCharacterLabel/ChooseCharacters"]
margin_left = 254.0
margin_right = 314.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
texture_normal = ExtResource( 17 )
expand = true
stretch_mode = 5

[node name="Label4" type="Label" parent="Instructions/ChooseCharacterPanel/ChooseCharacterLabel/ChooseCharacters/ChooseRachel"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -40.0
margin_top = 2.0
margin_right = 40.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 8 )
text = "Rachel"
align = 1

[node name="ChooseJosh" type="TextureButton" parent="Instructions/ChooseCharacterPanel/ChooseCharacterLabel/ChooseCharacters"]
margin_left = 334.0
margin_right = 394.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
texture_normal = ExtResource( 18 )
expand = true
stretch_mode = 5

[node name="Label5" type="Label" parent="Instructions/ChooseCharacterPanel/ChooseCharacterLabel/ChooseCharacters/ChooseJosh"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -40.0
margin_top = 2.0
margin_right = 40.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 8 )
text = "Joshua"
align = 1

[node name="ChooseCameron" type="TextureButton" parent="Instructions/ChooseCharacterPanel/ChooseCharacterLabel/ChooseCharacters"]
margin_left = 414.0
margin_right = 474.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
texture_normal = ExtResource( 19 )
expand = true
stretch_mode = 5

[node name="Label6" type="Label" parent="Instructions/ChooseCharacterPanel/ChooseCharacterLabel/ChooseCharacters/ChooseCameron"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -40.0
margin_top = 2.0
margin_right = 40.0
margin_bottom = 21.0
custom_fonts/font = SubResource( 8 )
text = "Cameron"
align = 1

[node name="Jump" type="Label" parent="Instructions"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 126.0
margin_right = 194.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 6 )
text = "Jump"

[node name="CrouchButton" type="Button" parent="Instructions"]
margin_left = -126.0
margin_top = 50.0
margin_right = -12.0
margin_bottom = 163.0
custom_fonts/font = SubResource( 7 )
text = "Crouch"

[connection signal="area_entered" from="Player/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_entered" from="CollectionArea" to="." method="_on_CollectionArea_area_entered"]
[connection signal="body_entered" from="CollectionArea" to="." method="_on_CollectionArea_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="gui_input" from="MouseGetter" to="Player" method="_on_MouseGetter_gui_input"]
[connection signal="pressed" from="Instructions/CrouchButton" to="Player" method="_on_CrouchButton_pressed"]
